Initial attempt to draw grids on map
Defines AggregatedDepthPrediction and populates with random data.
Uses leafletjs to display on page.
Need to think about how to package/manage JS.

--- a/manyfews/webapp/templates/webapp/index.html
+++ b/manyfews/webapp/templates/webapp/index.html
@@ -6,6 +6,30 @@
     <link rel="stylesheet" type="text/css" href="{% static 'webapp/map.css' %}" />
     {% leaflet_js %}
     {% leaflet_css %}
+
+    <script>
+        var dataUrl = '{% url "depths" %}';
+
+        window.addEventListener("map:init", function (e) {
+          var detail = e.detail;
+          fetch(dataUrl)
+            .then(function(resp) {
+              return resp.json();
+            })
+            .then(function(data) {
+              console.log(data);
+              data["items"].forEach(i => {
+                L.rectangle(i.bounds, {
+                  color: null,
+                  fillColor: 'CornflowerBlue',
+                  fillOpacity: i.depth * 0.5,
+                }).addTo(detail.map);
+              });
+            });
+          }, false
+        );
+
+    </script>
 </head>
 
 <body>
