--- a/manyfews/webapp/templates/webapp/index.html
+++ b/manyfews/webapp/templates/webapp/index.html
@@ -18,10 +18,15 @@
             <h1 class="row">ManyFEWS</h1>
             <h3 class="row">Flood warnings for Majalaya</h3>
         </div>
-        <div class="col-1 align-self-center right">
+        <div class="col-2 align-self-center right">
+          {% if user.is_authenticated %}
+            <div>Hi {{ user.username }}!</div>
+            <div><a href="{% url 'logout' %}" class="btn btn-primary">Log Out</a></div>
+          {% else %}
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#authModal">
             Login
           </button>
+          {% endif %}
         </div>
     </div>
     <div class="header container-fluid row">
@@ -48,7 +53,7 @@
     <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <form method="post">
+          <form method="post" action="/accounts/login/">
             <div class="modal-header">
               <h5 class="modal-title" uid="authModalLabel">Login</h5>
               <button type="button" class="btn close" data-bs-dismiss="modal" aria-label="Close">
@@ -60,7 +65,7 @@
               {{ login_form.as_p }}
             </div>
             <div class="modal-footer">
-              <button type="button" type="submit" class="btn btn-primary">Log In</button>
+              <button type="submit" class="btn btn-primary">Log In</button>
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
           </form>
