Use bing maps not mapbox

--- a/manyfews/webapp/templates/webapp/index.html
+++ b/manyfews/webapp/templates/webapp/index.html
@@ -29,6 +29,7 @@
         {% endfor %}
     </div>
     <div class="map">
+        <input type="hidden" id="mapApiKey" name="mapApiKey" value="{{ mapApiKey }}">
         {% leaflet_map "map" %}
     </div>
 </body>
