--- a/manyfews/templates/registration/login.html
+++ b/manyfews/templates/registration/login.html
@@ -10,7 +10,7 @@
   {% csrf_token %}
   {{ form|crispy }}
   <div class="form-group auth">
-    <button type="submit" class="btn btn-primary">Log In</button>
+    <button type="submit" class="btn btn-success" id="login-submit">Log In</button>
   </div>
 </form>
 </div>
