--- a/manyfews/templates/registration/signup.html
+++ b/manyfews/templates/registration/signup.html
@@ -7,7 +7,7 @@
   <form method="post" class="account-form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Sign Up</button>
+    <button type="submit" class="btn btn-success" id="signup-submit">Sign Up</button>
   </form>
 </div>
 {% endblock %}
