--- a/manyfews/webapp/assets/sass/main.scss
+++ b/manyfews/webapp/assets/sass/main.scss
@@ -10,6 +10,14 @@ body {
   height: 100%;
   margin: 0;
 
+  .center {
+    text-align: center;
+  }
+
+  .right {
+    text-align: right;
+  }
+
   .header {
     .daily-risk {
       margin-bottom: 10px;
