--- a/manyfews/webapp/templates/webapp/base.html
+++ b/manyfews/webapp/templates/webapp/base.html
@@ -23,6 +23,7 @@
             <div class="col"><a href="{% url 'logout' %}" class="btn btn-primary">Log Out</a></div>
           {% else %}
             <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+            <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
           {% endif %}
         </div>
     </div>
