--- a/manyfews/templates/registration/login.html
+++ b/manyfews/templates/registration/login.html
@@ -1,32 +1,14 @@
 <!-- templates/registration/login.html -->
 {% extends 'webapp/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container">
 <h3>Log In</h3>
-<form method="post">
-  {% if form.errors %}
-    <div class="alert alert-danger">
-      {{ form.non_field_errors }}
-      <ul class="errorlist field">
-      {% for field in form %}
-        {% for error in field.errors %}
-            <li>{{ error|escape }}</li>
-        {% endfor %}
-      {% endfor %}
-      </ul>
-    </div>
-  {% endif %}
+<form method="post" class="account-form">
 
   {% csrf_token %}
-  <div class="form-group auth row align-items-center">
-    <div class="col-3"><label for="id_username">Username</label></div>
-    <div class="col-9"><input type="text" name="username" class="form-control" id="id_username"></div>
-  </div>
-  <div class="form-group auth row align-items-center">
-    <div class="col-3"><label for="id_password">Password</label></div>
-    <div class="col-9"><input type="password" name="password" class="form-control" id="id_password" placeholder="Password"></div>
-  </div>
+  {{ form|crispy }}
   <div class="form-group auth">
     <button type="submit" class="btn btn-primary">Log In</button>
   </div>
