Allow users to reset their passwords
Modifies form to accept an email address instead of a username, and sets the username to the same address.

Temporarily set email backend to file-based.

--- a/manyfews/templates/registration/login.html
+++ b/manyfews/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
+<div class="container accounts">
 <h3>Log In</h3>
 <form method="post" class="account-form">
 
@@ -11,6 +11,7 @@
   {{ form|crispy }}
   <div class="form-group auth">
     <button type="submit" class="btn btn-success" id="login-submit">Log In</button>
+    <a href="{% url 'password_reset' %}" class="btn btn-secondary">Reset password</a>
   </div>
 </form>
 </div>
