--- a/manyfews/templates/registration/signup.html
+++ b/manyfews/templates/registration/signup.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
+<div class="container accounts">
 <h3>Sign up</h3>
   <form method="post" class="account-form">
     {% csrf_token %}
