Add tests for resetting password

--- a/manyfews/templates/registration/password_reset_confirm.html
+++ b/manyfews/templates/registration/password_reset_confirm.html
@@ -11,7 +11,7 @@
       {{ form|crispy }}
 
       <div class="form-group auth">
-        <input type="submit" class="btn btn-success" value="Change password">
+        <input type="submit" class="btn btn-success" value="Change password" id="confirm-reset-password-submit">
       </div>
     </form>
   {% else %}
