--- a/manyfews/templates/registration/password_reset_form.html
+++ b/manyfews/templates/registration/password_reset_form.html
@@ -11,7 +11,7 @@
     {{ form|crispy }}
 
     <div class="form-group auth">
-      <input type="submit" class="btn btn-success" value="Send password reset">
+      <input type="submit" class="btn btn-success" value="Send password reset" id="reset-password-submit">
       <a href="{% url 'login' %}" class="btn btn-secondary">Cancel</a>
     </div>
   </form>
