--- a/manyfews/templates/registration/login.html
+++ b/manyfews/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container accounts">
+<div class="container manyfews-forms">
 <h3>Log In</h3>
 <form method="post" class="account-form">
 
