--- a/manyfews/templates/registration/password_reset_complete.html
+++ b/manyfews/templates/registration/password_reset_complete.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container accounts">
+<div class="container manyfews-forms">
   <h3>Password reset complete</h3>
   <p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
 </div>
