--- a/manyfews/templates/registration/password_reset_confirm.html
+++ b/manyfews/templates/registration/password_reset_confirm.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container accounts">
+<div class="container manyfews-forms">
   {% if validlink %}
     <h3>Enter new password</h3>
 
