--- a/manyfews/templates/registration/password_reset_form.html
+++ b/manyfews/templates/registration/password_reset_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container accounts">
+<div class="container manyfews-forms">
   <h3>Forgot your password?</h3>
   <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
