--- a/manyfews/webapp/templates/webapp/alerts.html
+++ b/manyfews/webapp/templates/webapp/alerts.html
@@ -35,7 +35,7 @@
   {% endif %}
 
   {% if not edit %}
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#edit-alert" aria-expanded="false" aria-controls="editAlert">
+    <button class="btn btn-primary" type="button" id="add-new" data-bs-toggle="collapse" data-bs-target="#edit-alert" aria-expanded="false" aria-controls="editAlert">
       Add new
     </button>
   {% endif %}
