Add test for verification

--- a/manyfews/webapp/templates/webapp/alerts.html
+++ b/manyfews/webapp/templates/webapp/alerts.html
@@ -109,7 +109,7 @@
           <input type="hidden" name="alert_id" class="textinput textInput form-control" id="id_alert_id" value=""></input>
         </div>
         <div class="modal-footer">
-            <input type="submit" id="verify-link" class="btn btn-primary" value="Verify">
+            <input type="submit" id="verify-submit" class="btn btn-primary" value="Verify">
             <a href="" class="btn btn-secondary" id="verify-resend">Resend Code</a>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         </div>
