--- a/manyfews/webapp/templates/webapp/base.html
+++ b/manyfews/webapp/templates/webapp/base.html
@@ -30,4 +30,25 @@
     </div>
     {% block content %}
     {% endblock %}
+    <div class="footer container-fluid">
+      <a class="col" data-bs-toggle="modal" data-bs-target="#privacy-modal">Privacy Policy</a>
+    </div>
+
+    <!-- Privacy policy modal -->
+    <div class="modal modal-wide" id="privacy-modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">ManyFEWS Privacy Policy</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <iframe src="{% static 'privacy_policy.pdf' %}" width="100%" height="500px"></iframe>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
